  - move output to separate code, e.g. libpff
* evtinfo
* pyevt
  - functionality to parse event identifier ?
  - string representations of event type ?
  - access to data
* tests
  - file wrap

Format:
* event flags ? (debug function)
* closing record number ?

Notes
* %SystemRoot% expansion support for WINNT and WINNT35
  check if this is set in SOFTWARE\Microsoft\Windows NT\CurrentVersion\ ?

20141217
* worked on Python 3 support

20141129
* code clean up

20141117
* code clean up

20141026
* changes for deployment

20141019
* changes for deployment

20141009
* updated dependencies and corresponding changes

20141004
* update Python-bindings tests

20140928
* removed README.macosx
* changes for project site move

20140831
* bug fix in Python-bindings

20140731
* bug fix in Python-bindings

20140723
* worked on dpkg debug packages support

20140531
* updated msvscpp files

20140530
* updated dependencies
* worked on Python-bindings
* replaced PackageMaker for pkgbuild

20140411
* bug fix for strings offset correction if member data > 0

20140402
* code clean up

20140323
* worked on Python-bindings

20140317
* updated dependencies
* worked on setup.py
* worked on Python-bindings

20140131
* removed examples

20140112
* updated dependencies

20140105
* bug fix in check signature
* 2014 update
* updated dependencies

20132111
* small fix in evtexport -h output
* updated dependencies
* worked on Python bindings

20131013
* updated dependencies

20130928
* worked on setup.py, largely for MSI builds

20130923
* updated dependencies

20130909
* updated dependencies
* worked on libcthreads build support

20130727
* updated dependencies

20130726
* pyevt
  - changed event identifier to an unsigned long
  - fixes for >2G file objects in BFIO glue code

20130609
* updated dependencies

20130421
* worked on tests
* updated dependencies

20130416
* code clean up

20130415
* bug fix for wrapped event record

20130414
* updated dependencies
* fixed codepage 1255 restriction